tests/endtoend/failure/expected/error_chained_equality.compile.out
error_chained_equality.silly:2:17: error: parse error: mismatched input 'EQ' expecting ';'
    2 | BOOL b = 1 EQ 1 EQ 0;  // should fail
      |                 ^
